implemented processEvent transaction, need to imlement the rest of them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,11 +40,11 @@ set(SERVER_SRC
     server/main.cpp
     server/Connection.cpp
     server/Connection.hpp
+    server/AimContext.hpp
     server/CreateSchema.cpp
     server/CreateSchema.hpp
     server/Populate.cpp
     server/Populate.hpp
-    server/Transactions.hpp
     server/Q1Transaction.cpp
     server/Q2Transaction.cpp
     server/Q3Transaction.cpp
