reverted unnecessary lines in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(Jemalloc REQUIRED)
 
 # used for newer gcc versions that clash with Kudu
 # --> make sure we compile old ABI
-add_definitions( -D_GLIBCXX_USE_CXX11_ABI=0 )
+#add_definitions( -D_GLIBCXX_USE_CXX11_ABI=0 )
 
 set(COMMON_SRC
     common/Protocol.cpp
@@ -118,7 +118,6 @@ target_link_libraries(rta_client PRIVATE ${Jemalloc_LIBRARIES})
 set(USE_KUDU OFF CACHE BOOL "Build AIM for Kudu")
 if(${USE_KUDU})
     set(kuduClient_DIR "/mnt/local/tell/kudu_install/share/kuduClient/cmake")
-    set(kuduClient_DIR "/usr/local/share/kuduClient/cmake")
     find_package(kuduClient REQUIRED)
     find_package(Threads)
     message(STATUS "Kudu header found at ${KUDU_CLIENT_INCLUDE_DIR}")
